-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.6
-
None
-
Debian
QDBusConnection can deadlock on an app exit. It heavily affects CI as potentially all linux tests are affected. I managed to reproduce the problem after running qabstractnetworkcache test in a loop for 47h (c326cc86925ac6cb2e9b119d225be266bdbe043c). I will keep it hanging with gdb attached for a few days so I can help testing. Meanwhile there is a backtrace:
(gdb) thread apply all bt full
Thread 3 (Thread 0x7f712ffff700 (LWP 28255)):
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
No locals.
#1 0x00007f713902a836 in _q_futex (addr=0x7f7139573d28 <_q_ObjectMutexPool+744>, op=0, val=3, timeout=0x0) at /home/nierob/dev/qtbase/src/corelib/thread/qmutex_linux.cpp:146
int_addr = 0x7f7139573d28 <_q_ObjectMutexPool+744>
addr2 = 0x0
val2 = 0
#2 0x00007f713902aa2e in lockInternal_helper<false> (d_ptr=..., timeout=-1, elapsedTimer=0x0) at /home/nierob/dev/qtbase/src/corelib/thread/qmutex_linux.cpp:187
r = 0
ts = {tv_sec = 140124113330736, tv_nsec = 140124264507176}
pts = 0x0
#3 0x00007f713902a897 in QBasicMutex::lockInternal (this=0x7f7139573d28 <_q_ObjectMutexPool+744>) at /home/nierob/dev/qtbase/src/corelib/thread/qmutex_linux.cpp:203
No locals.
#4 0x00007f713902a652 in QMutex::lock (this=0x7f7139573d28 <_q_ObjectMutexPool+744>) at /home/nierob/dev/qtbase/src/corelib/thread/qmutex.cpp:217
current = 0x1
#5 0x00007f7139008ced in QMutexLocker::QMutexLocker (this=0x7f712fffe330, m=0x7f7139573d28 <_q_ObjectMutexPool+744>) at ../../include/QtCore/../../../qtbase/src/corelib/thread/qmutex.h:128
No locals.
#6 0x00007f71392a10b4 in QMetaObject::activate (sender=0x7f71280030f0, signalOffset=3, local_signal_index=4, argv=0x7f712fffe440) at /home/nierob/dev/qtbase/src/corelib/kernel/qobject.cpp:3620
locker = {val = 140124270050600}
connectionLists = {connectionLists = 0x7f712fffe410}
list = 0x0
signal_index = 7
empty_argv = {0x0}
currentThreadId = 0x7f712ffff700
__PRETTY_FUNCTION__ = "static void QMetaObject::activate(QObject*, int, int, void**)"
#7 0x00007f71392a0e40 in QMetaObject::activate (sender=0x7f71280030f0, m=0x7f7134316aa0 <QDBusConnectionPrivate::staticMetaObject>, local_signal_index=4, argv=0x7f712fffe440) at /home/nierob/dev/qtbase/src/corelib/kernel/qobject.cpp:3588
No locals.
#8 0x00007f71342df855 in QDBusConnectionPrivate::signalNeedsDisconnecting (this=0x7f71280030f0, _t1=..., _t2=...) at .moc/moc_qdbusconnection_p.cpp:312
_t0 = false
_a = {0x7f712fffe45f, 0x7f712fffe4f0, 0x7f712fffe4a0}
#9 0x00007f7134294080 in QDBusConnectionPrivate::disconnectRelay (this=0x7f71280030f0, service=..., path=..., interface=..., receiver=0x7f71200062d0, signal=...) at /home/nierob/dev/qtbase/src/dbus/qdbusintegrator.cpp:2290
hook = {service = {static null = {<No data fields>}, d = 0x7f7120007f20}, path = {static null = {<No data fields>}, d = 0x7f7120003bf0}, signature = {static null = {<No data fields>}, d = 0x7f712000f3f0}, obj = 0x7f71200062d0,
midx = 6, params = {d = 0x7f712000af90}, argumentMatch = {<QList<QString>> = {<QListSpecialMethods<QString>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0,
array = {0x0}}, d = 0x7f713934cd30 <QListData::shared_null>}, d = 0x7f713934cd30 <QListData::shared_null>}}, <No data fields>}, matchRule = {d = 0x7f712000ade0}}
key = {static null = {<No data fields>}, d = 0x7f712000c5a0}
sig = {d = 0x7f712000a740}
#10 0x00007f71342a6b00 in QDBusAbstractInterface::disconnectNotify (this=0x7f71200062d0, signal=...) at /home/nierob/dev/qtbase/src/dbus/qdbusabstractinterface.cpp:622
mm = {mobj = 0x7f712e230f60 <QNetworkManagerInterfaceDeviceWired::staticMetaObject>, handle = 14}
conn = 0x7f71280030f0
mo = 0x7f712e230f60 <QNetworkManagerInterfaceDeviceWired::staticMetaObject>
midx = 6
end = 10
d = 0x7f7120007f80
#11 0x00007f713929a6f6 in QObject::~QObject (this=0x187e870, __in_chrg=<optimized out>) at /home/nierob/dev/qtbase/src/corelib/kernel/qobject.cpp:997
m = 0x7f71280025c0
slotObj = 0x7f712fffe690
sender = 0x7f71200062d0
needToUnlock = false
senderLists = 0x7f712fffe690
signalSlotMutex = 0x7f7139573d28 <_q_ObjectMutexPool+744>
locker = {val = 140124270050601}
node = 0x7f7120008930
d = 0x187de10
sharedRefcount = 0x0
#12 0x00007f71396cbab9 in QBearerEngine::~QBearerEngine (this=0x187e870, __in_chrg=<optimized out>) at /home/nierob/dev/qtbase/src/network/bearer/qbearerengine.cpp:45
No locals.
#13 0x00007f712e203b3a in QBearerEngineImpl::~QBearerEngineImpl (this=0x187e870, __in_chrg=<optimized out>) at /home/nierob/dev/qtbase/src/plugins/bearer/networkmanager/../qbearerengine_impl.h:54
No locals.
#14 0x00007f712e1fc3b8 in QNetworkManagerEngine::~QNetworkManagerEngine (this=0x187e870, __in_chrg=<optimized out>) at /home/nierob/dev/qtbase/src/plugins/bearer/networkmanager/qnetworkmanagerengine.cpp:92
No locals.
#15 0x00007f712e1fc3e8 in QNetworkManagerEngine::~QNetworkManagerEngine (this=0x187e870, __in_chrg=<optimized out>) at /home/nierob/dev/qtbase/src/plugins/bearer/networkmanager/qnetworkmanagerengine.cpp:112
---Type <return> to continue, or q <return> to quit---
No locals.
#16 0x00007f71396ca168 in qDeleteAll<QList<QBearerEngine*>::const_iterator> (begin=..., end=...) at ../../include/QtCore/../../../qtbase/src/corelib/tools/qalgorithms.h:317
No locals.
#17 0x00007f71396c9911 in qDeleteAll<QList<QBearerEngine*> > (c=...) at ../../include/QtCore/../../../qtbase/src/corelib/tools/qalgorithms.h:325
No locals.
#18 0x00007f71396c6cbf in QNetworkConfigurationManagerPrivate::~QNetworkConfigurationManagerPrivate (this=0x1889e80, __in_chrg=<optimized out>) at /home/nierob/dev/qtbase/src/network/bearer/qnetworkconfigmanager_p.cpp:78
locker = {val = 25730721}
#19 0x00007f71396c6d84 in QNetworkConfigurationManagerPrivate::~QNetworkConfigurationManagerPrivate (this=0x1889e80, __in_chrg=<optimized out>) at /home/nierob/dev/qtbase/src/network/bearer/qnetworkconfigmanager_p.cpp:82
No locals.
#20 0x00007f71392a315f in qDeleteInEventHandler (o=0x1889e80) at /home/nierob/dev/qtbase/src/corelib/kernel/qobject.cpp:4465
No locals.
#21 0x00007f713929aba4 in QObject::event (this=0x1889e80, e=0x1889cf0) at /home/nierob/dev/qtbase/src/corelib/kernel/qobject.cpp:1240
No locals.
#22 0x00007f713926160d in QCoreApplicationPrivate::notify_helper (receiver=0x1889e80, event=0x1889cf0) at /home/nierob/dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:1136
No locals.
#23 0x00007f71392612a5 in doNotify (receiver=0x1889e80, event=0x1889cf0) at /home/nierob/dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:1077
__PRETTY_FUNCTION__ = "bool doNotify(QObject*, QEvent*)"
#24 0x00007f7139261179 in QCoreApplication::notifyInternal2 (receiver=0x1889e80, event=0x1889cf0) at /home/nierob/dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:1001
threadData = 0x188a7c0
loopLevelCounter = {threadData = 0x188a7c0}
selfRequired = false
result = false
cbdata = {0x1889e80, 0x1889cf0, 0x7f712fffea07}
d = 0x1889ee0
#25 0x00007f7139265166 in QCoreApplication::sendEvent (receiver=0x1889e80, event=0x1889cf0) at /home/nierob/dev/qtbase/src/corelib/kernel/qcoreapplication.h:227
No locals.
#26 0x00007f7139262537 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x188a7c0) at /home/nierob/dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:1636
e = 0x1889cf0
pe = @0x7f71200114d8: {receiver = 0x1889e80, event = 0x0, priority = 0}
r = 0x1889e80
unlocker = {m = @0x7f712fffeae0}
event_deleter = {d = 0x1889cf0}
__PRETTY_FUNCTION__ = "static void QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*)"
locker = {val = 25733096}
startOffset = 0
i = @0x188a7dc: 1
cleanup = {receiver = 0x0, event_type = 0, data = 0x188a7c0, exceptionCaught = true}
#27 0x00007f7139261ee6 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /home/nierob/dev/qtbase/src/corelib/kernel/qcoreapplication.cpp:1494
data = 0x188a7c0
#28 0x00007f71392d92a0 in postEventSourceDispatch (s=0x7f71200012d0) at /home/nierob/dev/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:270
source = 0x7f71200012d0
#29 0x00007f71355a4c3d in g_main_dispatch (context=0x7f7120000990) at /tmp/buildd/glib2.0-2.44.1/./glib/gmain.c:3122
dispatch = 0x7f71392d925c <postEventSourceDispatch(GSource*, GSourceFunc, gpointer)>
prev_source = 0x0
was_in_call = 0
user_data = 0x0
callback = 0x0
cb_funcs = <optimized out>
cb_data = <optimized out>
need_destroy = <optimized out>
source = 0x7f71200012d0
current = 0x7f71280025c0
i = 0
#30 g_main_context_dispatch (context=context@entry=0x7f7120000990) at /tmp/buildd/glib2.0-2.44.1/./glib/gmain.c:3737
No locals.
#31 0x00007f71355a4f20 in g_main_context_iterate (context=context@entry=0x7f7120000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /tmp/buildd/glib2.0-2.44.1/./glib/gmain.c:3808
max_priority = 2147483647
timeout = 9760
some_ready = 1
nfds = <optimized out>
allocated_nfds = 1
fds = 0x7f7120002e70
---Type <return> to continue, or q <return> to quit---
#32 0x00007f71355a4fcc in g_main_context_iteration (context=0x7f7120000990, may_block=1) at /tmp/buildd/glib2.0-2.44.1/./glib/gmain.c:3869
retval = <optimized out>
#33 0x00007f71392d9a5b in QEventDispatcherGlib::processEvents (this=0x7f71200008c0, flags=...) at /home/nierob/dev/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:417
d = 0x7f71200008e0
canWait = true
savedFlags = {i = 0}
result = false
#34 0x00007f713925db04 in QEventLoop::processEvents (this=0x7f712fffee20, flags=...) at /home/nierob/dev/qtbase/src/corelib/kernel/qeventloop.cpp:128
d = 0x7f7120002d90
#35 0x00007f713925dddd in QEventLoop::exec (this=0x7f712fffee20, flags=...) at /home/nierob/dev/qtbase/src/corelib/kernel/qeventloop.cpp:204
locker = {val = 25732880}
__PRETTY_FUNCTION__ = "int QEventLoop::exec(QEventLoop::ProcessEventsFlags)"
ref = {d = 0x7f7120002d90, locker = @0x7f712fffeda0, exceptionCaught = true}
app = 0x7ffcb7c2e8b0
d = 0x7f7120002d90
#36 0x00007f713902e256 in QThread::exec (this=0x188a680) at /home/nierob/dev/qtbase/src/corelib/thread/qthread.cpp:503
d = 0x188a6a0
locker = {val = 25732880}
eventLoop = {<QObject> = {_vptr.QObject = 0x7f713956ac90 <vtable for QEventLoop+16>, static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x7f7139409f00 <qt_meta_stringdata_QObject>,
data = 0x7f713940a040 <qt_meta_data_QObject>, static_metacall = 0x7f71392a3e1a <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {
d = 0x7f7120002d90}, static staticQtMetaObject = {d = {superdata = 0x0, stringdata = 0x7f71394595c0 <qt_meta_stringdata_Qt>, data = 0x7f7139464280 <qt_meta_data_Qt>, static_metacall = 0x0, relatedMetaObjects = 0x0,
extradata = 0x0}}}, static staticMetaObject = {d = {superdata = 0x7f713956d000 <QObject::staticMetaObject>, stringdata = 0x7f7139472000 <qt_meta_stringdata_QEventLoop>, data = 0x7f7139472080 <qt_meta_data_QEventLoop>,
static_metacall = 0x7f713933df96 <QEventLoop::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}}
returnCode = 32625
#37 0x00007f713902e3f8 in QThread::run (this=0x188a680) at /home/nierob/dev/qtbase/src/corelib/thread/qthread.cpp:570
No locals.
#38 0x00007f7139035c79 in QThreadPrivate::start (arg=0x188a680) at /home/nierob/dev/qtbase/src/corelib/thread/qthread_unix.cpp:332
__clframe = {__cancel_routine = 0x7f7139035cf4 <QThreadPrivate::finish(void*)>, __cancel_arg = 0x188a680, __do_it = 1, __cancel_type = 0}
thr = 0x188a680
data = 0x188a7c0
#39 0x00007f7138d2d0a4 in start_thread (arg=0x7f712ffff700) at pthread_create.c:309
__res = <optimized out>
pd = 0x7f712ffff700
now = <optimized out>
unwind_buf = {cancel_jmp_buf = {{jmp_buf = {140124113336064, -2601729206614513138, 0, 140124272570464, 0, 140124113336064, 2667981379823446542, 2668027325930646030}, mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 0x0, 0x0}, data = {
prev = 0x0, cleanup = 0x0, canceltype = 0}}}
not_first_call = <optimized out>
pagesize_m1 = <optimized out>
sp = <optimized out>
freesize = <optimized out>
__PRETTY_FUNCTION__ = "start_thread"
#40 0x00007f71381d006d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
No locals.
Thread 2 (Thread 0x7f712f7fe700 (LWP 28256)):
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
No locals.
#1 0x00007f713902a836 in _q_futex (addr=0x7f7139573d28 <_q_ObjectMutexPool+744>, op=0, val=3, timeout=0x0) at /home/nierob/dev/qtbase/src/corelib/thread/qmutex_linux.cpp:146
int_addr = 0x7f7139573d28 <_q_ObjectMutexPool+744>
addr2 = 0x0
val2 = 0
#2 0x00007f713902aa2e in lockInternal_helper<false> (d_ptr=..., timeout=-1, elapsedTimer=0x0) at /home/nierob/dev/qtbase/src/corelib/thread/qmutex_linux.cpp:187
r = 0
ts = {tv_sec = 140124104940320, tv_nsec = 140124264507176}
pts = 0x0
#3 0x00007f713902a897 in QBasicMutex::lockInternal (this=0x7f7139573d28 <_q_ObjectMutexPool+744>) at /home/nierob/dev/qtbase/src/corelib/thread/qmutex_linux.cpp:203
No locals.
#4 0x00007f713902a652 in QMutex::lock (this=0x7f7139573d28 <_q_ObjectMutexPool+744>) at /home/nierob/dev/qtbase/src/corelib/thread/qmutex.cpp:217
current = 0x3
#5 0x00007f71392a49ba in QOrderedMutexLocker::relock (mtx1=0x7f7139573e40 <_q_ObjectMutexPool+1024>, mtx2=0x7f7139573d28 <_q_ObjectMutexPool+744>)
at ../../include/QtCore/5.6.0/QtCore/private/../../../../../../qtbase/src/corelib/thread/qorderedmutexlocker_p.h:100
No locals.
---Type <return> to continue, or q <return> to quit---
#6 0x00007f713929a544 in QObject::~QObject (this=0x7f7128003e50, __in_chrg=<optimized out>) at /home/nierob/dev/qtbase/src/corelib/kernel/qobject.cpp:951
c = 0x7f712800fc40
m = 0x7f7139573d28 <_q_ObjectMutexPool+744>
needToUnlock = false
connectionList = @0x7f712800fd08: {first = 0x7f712800fc40, last = 0x7f712800fc40}
signal = 3
connectionListsCount = 4
signalSlotMutex = 0x7f7139573e40 <_q_ObjectMutexPool+1024>
locker = {val = 140124270050881}
node = 0x7f7139035703 <get_thread_data()+20>
d = 0x7f712800fb40
sharedRefcount = 0x0
#7 0x00007f71392acf75 in QSocketNotifier::~QSocketNotifier (this=0x7f7128003e50, __in_chrg=<optimized out>) at /home/nierob/dev/qtbase/src/corelib/kernel/qsocketnotifier.cpp:192
No locals.
#8 0x00007f71392acfa4 in QSocketNotifier::~QSocketNotifier (this=0x7f7128003e50, __in_chrg=<optimized out>) at /home/nierob/dev/qtbase/src/corelib/kernel/qsocketnotifier.cpp:195
No locals.
#9 0x00007f7134289315 in qDBusRemoveWatch (watch=0x7f712800d420, data=0x7f71280030f0) at /home/nierob/dev/qtbase/src/dbus/qdbusintegrator.cpp:245
d = 0x7f71280030f0
fd = 6
locker = {<QDBusMutexLocker> = {<QDBusLockerBase> = {<No data fields>}, self = 0x7f71280030f0, mutex = 0x7f7128003130, action = RemoveWatchAction}, <No data fields>}
i = {i = 0x7f712800f990}
#10 0x00007f7134046bc3 in _dbus_watch_list_remove_watch () from /lib/x86_64-linux-gnu/libdbus-1.so.3
No symbol table info available.
#11 0x00007f713404506e in ?? () from /lib/x86_64-linux-gnu/libdbus-1.so.3
No symbol table info available.
#12 0x00007f71340450e9 in ?? () from /lib/x86_64-linux-gnu/libdbus-1.so.3
No symbol table info available.
#13 0x00007f7134043eab in ?? () from /lib/x86_64-linux-gnu/libdbus-1.so.3
No symbol table info available.
#14 0x00007f713402ea82 in ?? () from /lib/x86_64-linux-gnu/libdbus-1.so.3
No symbol table info available.
#15 0x00007f7134287b98 in q_dbus_connection_close (connection=0x7f712800d970) at /home/nierob/dev/qtbase/src/dbus/qdbus_symbols_p.h:187
ptr = 0x7f713402eb00 <dbus_connection_close>
#16 0x00007f713428ce1a in QDBusConnectionPrivate::closeConnection (this=0x7f71280030f0) at /home/nierob/dev/qtbase/src/dbus/qdbusintegrator.cpp:1031
locker = {<QDBusLockerBase> = {<No data fields>}, self = 0x7f71280030f0, action = CloseConnectionAction}
oldMode = QDBusConnectionPrivate::ClientMode
__PRETTY_FUNCTION__ = "void QDBusConnectionPrivate::closeConnection()"
#17 0x00007f713427ec01 in QDBusConnectionManager::run (this=0x7f7134316e40 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at /home/nierob/dev/qtbase/src/dbus/qdbusconnection.cpp:162
d = 0x7f71280030f0
it = {i = 0x7f712800d4e0}
locker = {val = 140124183686737}
#18 0x00007f7139035c79 in QThreadPrivate::start (arg=0x7f7134316e40 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at /home/nierob/dev/qtbase/src/corelib/thread/qthread_unix.cpp:332
__clframe = {__cancel_routine = 0x7f7139035cf4 <QThreadPrivate::finish(void*)>, __cancel_arg = 0x7f7134316e40 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>, __do_it = 1, __cancel_type = 0}
thr = 0x7f7134316e40 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>
data = 0x188c6d0
#19 0x00007f7138d2d0a4 in start_thread (arg=0x7f712f7fe700) at pthread_create.c:309
__res = <optimized out>
pd = 0x7f712f7fe700
now = <optimized out>
unwind_buf = {cancel_jmp_buf = {{jmp_buf = {140124104943360, -2601729206614513138, 0, 140124272570464, 140124183063878, 140124104943360, 2667982477724461582, 2668027325930646030}, mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 0x0,
0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
not_first_call = <optimized out>
pagesize_m1 = <optimized out>
sp = <optimized out>
freesize = <optimized out>
__PRETTY_FUNCTION__ = "start_thread"
#20 0x00007f71381d006d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
No locals.
Thread 1 (Thread 0x7f7139602740 (LWP 28253)):
#0 pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
No locals.
---Type <return> to continue, or q <return> to quit---
#1 0x00007f713903732e in QWaitConditionPrivate::wait (this=0x188c660, time=18446744073709551615) at /home/nierob/dev/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:136
code = 0
#2 0x00007f7139037101 in QWaitCondition::wait (this=0x188bd48, mutex=0x188bd20, time=18446744073709551615) at /home/nierob/dev/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:208
__PRETTY_FUNCTION__ = "bool QWaitCondition::wait(QMutex*, long unsigned int)"
returnValue = false
#3 0x00007f713903689a in QThread::wait (this=0x7f7134316e40 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>, time=18446744073709551615) at /home/nierob/dev/qtbase/src/corelib/thread/qthread_unix.cpp:663
d = 0x188bcb0
locker = {val = 25738529}
__PRETTY_FUNCTION__ = "bool QThread::wait(long unsigned int)"
#4 0x00007f713427ea67 in QDBusConnectionManager::~QDBusConnectionManager (this=0x7f7134316e40 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>, __in_chrg=<optimized out>)
at /home/nierob/dev/qtbase/src/dbus/qdbusconnection.cpp:131
No locals.
#5 0x00007f713427e5cc in (anonymous namespace)::Q_QGS__q_manager::Holder::~Holder (this=0x7f7134316e40 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>, __in_chrg=<optimized out>)
at /home/nierob/dev/qtbase/src/dbus/qdbusconnection.cpp:60
No locals.
#6 0x00007f7138121bc9 in __run_exit_handlers (status=0, listp=0x7f713848d5a8 <__exit_funcs>, run_list_atexit=run_list_atexit@entry=true) at exit.c:82
atfct = <optimized out>
onfct = <optimized out>
cxafct = <optimized out>
f = <optimized out>
#7 0x00007f7138121c15 in __GI_exit (status=<optimized out>) at exit.c:104
No locals.
#8 0x00007f713810bb4c in __libc_start_main (main=0x4076f0 <main(int, char**)>, argc=1, argv=0x7ffcb7c2e9b8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffcb7c2e9a8) at libc-start.c:321
result = <optimized out>
unwind_buf = {cancel_jmp_buf = {{jmp_buf = {0, -2601729206614513138, 4212688, 140723391490480, 0, 0, 2602414932942891534, 2668027857078430222}, mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 0x40dcb0 <__libc_csu_init>,
0x7ffcb7c2e9b8}, data = {prev = 0x0, cleanup = 0x0, canceltype = 4250800}}}
not_first_call = <optimized out>
#9 0x00000000004047f9 in _start ()
No symbol table info available.